--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.7",
     "@mui/styles": "^5.2.3",
+    "babel-plugin-styled-components": "^2.0.2",
     "material-ui-popup-state": "^2.0.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components.macro": "^1.0.0"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7"
   }
