--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "material-ui-popup-state": "^2.0.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components.macro": "^1.0.0"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7"
   }
